elemento <a> com ausência de texto descritivo. ajuste dos links vazios acontent, anavigation e afooter para atender os critérios de acessibilidade

--- a/src/brasil/gov/temas/themes/azul/index.html
+++ b/src/brasil/gov/temas/themes/azul/index.html
@@ -169,7 +169,7 @@
 
             <!-- Column 1 -->
             <div id="navigation">
-                <a name="anavigation" id="anavigation"></a>
+                <a name="anavigation" id="anavigation" class="anchor">menu</a>
                 <span class="menuTrigger">Menu</span>
                 <div id="portal-column-one" class="cell width-1:4 position-0">
 
@@ -305,7 +305,7 @@
 
             <!-- Conteudo -->
             <div id="portal-column-content" class="cell width-1:2 position-1:4">
-                <a name="acontent" id="acontent"></a>
+                <a name="acontent" id="acontent" class="anchor">conteúdo</a>
 
                 <div id="main-content" class="">
 
@@ -426,7 +426,7 @@
 
 <!-- Footer -->
 <div id="footer" role="contentinfo">
-    <a name="afooter" id="afooter"></a>
+    <a name="afooter" id="afooter" class="anchor">rodapé</a>
 
     <div id="doormat">
         Menu do rodape
