AJustes de funcionamento do tema

--- a/src/brasil/gov/temas/themes/padrao/index.html
+++ b/src/brasil/gov/temas/themes/padrao/index.html
@@ -40,8 +40,10 @@
           </div>
 
           <div class="header-links">
-            <a href="#" class="link-contraste">Alto Contraste</a>
-            <a href="#" class="link-vlibras">Vlibras</a>
+            <ul>
+              <li><a href="#" class="link-contraste">Alto Contraste</a></li>
+              <li><a href="#" class="link-vlibras">Vlibras</a></li>
+            </ul>
           </div>
       </div>
 
@@ -163,11 +165,6 @@
 
       <footer id="portal-footer">
         <div class="footer-wrapper">
-          <div class="footer-logo">
-            <a href="#" title="#">
-              <img alt="Logo" src="./img/logo-rodape.png" />
-            </a>
-          </div>
 
           <div class="colunas-rodape">
             <div class="coluna-redes">
@@ -197,7 +194,14 @@
               </ul>
             </div>
             <div class="coluna-governo">
-              <img alt="Governo Federal" src="./img/gg.png" />
+              <ul>
+                <li class="logo-governo">
+                  <a href="#">Governo Federal</a>
+                </li>
+                <li class="logo-acesso">
+                  <a href="#">Acesso à Informação</a>
+                </li>
+              </ul>
             </div>
           </div>
 
