--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -9,6 +9,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <link href="brasilgovtemas.css" rel="stylesheet">
+    <script src="brasilgovtemas.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="img/touch_icon.png">
   </head>
