Ajustes no topo, rodape e grid

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <title>Prefeitura Municipal de Araraquara</title>
+    <title>IDG 2.0</title>
     <!--[if IE]>
     <script src="http://htmlshiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -27,8 +27,8 @@
     <header id="main-header" role="banner">
       <div class="header-wrapper">
           <div class="header-icons">
-            <a href="#" class="ico-navegacao">Navegação</a>
-            <a href="#" class="ico-busca">Busca</a>
+            <a class="ico-navegacao">Navegação</a>
+            <a class="ico-busca">Busca</a>
           </div>
 
           <div id="logo">
@@ -39,25 +39,44 @@
               </a>
           </div>
 
-          <div class="header-links">
+          <div class="header-accessibility">
             <ul>
               <li><a href="#" class="link-contraste">Alto Contraste</a></li>
-              <li><a href="#" class="link-vlibras">Vlibras</a></li>
+              <li><a href="http://www.vlibras.gov.br/" class="link-vlibras">Vlibras</a></li>
             </ul>
           </div>
       </div>
 
       <!-- Main Menu -->
-      <nav id="main-navigation" role="navigation">
-          <ul>
-            <li><a href="#" title="Link name">Notícias</a></li>
-            <li><a href="#" title="Link name">FAQ</a></li>
-            <li><a href="#" title="Link name">Trabalhador</a></li>
-            <li><a href="#" title="Link name">Empregador</a></li>
-            <li><a href="#" title="Link name">Vídeos</a></li>
-            <li><a href="#" title="Link name">Leia na Íntegra</a></li>
-          </ul>
-      </nav>
+      <div class="navigation-wrapper">
+        <div class="navigation-content">
+
+          <nav id="main-navigation" role="navigation" class="navigation-cell">
+              <h4>Editorias</h4>
+              <ul>
+                <li><a href="#" title="Link name">Notícias</a></li>
+                <li><a href="#" title="Link name">FAQ</a></li>
+                <li><a href="#" title="Link name">Trabalhador</a></li>
+                <li><a href="#" title="Link name">Empregador</a></li>
+                <li><a href="#" title="Link name">Vídeos</a></li>
+                <li><a href="#" title="Link name">Leia na Íntegra</a></li>
+              </ul>
+          </nav>
+          <div class="navigation-centrais navigation-cell">
+            <h4>Centrais de conteúdo</h4>
+          </div>
+          <div class="navigation-fale navigation-cell">
+            <h4>Fale Conosco</h4>
+            <ul></ul>
+          </div>
+          <div class="navigation-redes navigation-cell">
+            <h4>Redes Sociais</h4>
+            <ul></ul>
+
+          </div>
+
+        </div>
+      </div>
 
       <!-- Search -->
       <div id="search" role="search">
@@ -185,13 +204,19 @@
                 <li>icone6</li>
               </ul>
             </div>
-            <div class="coluna-links">
+            <div class="coluna-centrais">
               <ul>
                 <li><a href="http://www.trabalho.gov.br/">Ministério do Trabalho</a></li>
                 <li><a href="https://empregabrasil.mte.gov.br/">Emprega Brasil</a></li>
                 <li><a href="http://fazenda.gov.br/">Ministério da Fazenda</a></li>
                 <li><a href="http://www.casacivil.gov.br/">Casa Civil</a></li>
               </ul>
+            </div>
+            <div class="coluna-fale">
+              <ul></ul>
+            </div>
+            <div class="coluna-navegacao">
+              <ul></ul>
             </div>
             <div class="coluna-governo">
               <ul>
