Estilos para o texto do NITF

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -7,7 +7,7 @@
     <script src="http://htmlshiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700" rel="stylesheet">
     <script src="brasilgovtemas.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="img/touch_icon.png">
