Adiciona classe para inverter o texto em casos específicos

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -23,7 +23,7 @@
       </ul>
     </div>
     <!-- Header -->
-    <header id="main-header" role="banner">
+    <header id="main-header" role="banner" class="inverter">
       <div class="header-wrapper">
           <div class="header-icons">
             <a class="ico-navegacao">Navegação</a>
@@ -90,7 +90,7 @@
 
     </header>
 
-    <div id="wrapper">
+    <div id="wrapper" class="inverter">
 
       <div id="portal-breadcrumbs">
 
