Adiciona navegação do portal em 2 níveis

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -50,8 +50,7 @@
         <div class="navigation-content">
 
           <nav id="main-navigation" role="navigation" class="navigation-cell">
-              <h4>Editorias</h4>
-              <ul>
+              <ul class="list-navigation">
                 <li><a href="#" title="Link name">Notícias</a></li>
                 <li><a href="#" title="Link name">FAQ</a></li>
                 <li><a href="#" title="Link name">Trabalhador</a></li>
@@ -59,19 +58,13 @@
                 <li><a href="#" title="Link name">Vídeos</a></li>
                 <li><a href="#" title="Link name">Leia na Íntegra</a></li>
               </ul>
-          </nav>
-          <div class="navigation-centrais navigation-cell">
-            <h4>Centrais de conteúdo</h4>
-          </div>
-          <div class="navigation-fale navigation-cell">
-            <h4>Fale Conosco</h4>
-            <ul></ul>
-          </div>
-          <div class="navigation-redes navigation-cell">
-            <h4>Redes Sociais</h4>
-            <ul></ul>
+            <div class="navigation-redes navigation-cell">
+              <h4>Redes Sociais</h4>
+              <ul></ul>
 
-          </div>
+            </div>
+          </nav>
+
 
         </div>
       </div>
