Adiciona navegacao ao rodape

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>IDG 2.0</title>
+    <!--[if IE]>
+    <script src="http://htmlshiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,900" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="img/touch_icon.png">
   </head>
@@ -182,7 +186,7 @@
               </ul>
             </div>
             <div class="coluna-menu">
-              <ul>
+              <ul class="rodape-navigation">
                 <li>icone1</li>
                 <li>icone2</li>
                 <li>icone3</li>
@@ -190,20 +194,6 @@
                 <li>icone5</li>
                 <li>icone6</li>
               </ul>
-            </div>
-            <div class="coluna-centrais">
-              <ul>
-                <li><a href="http://www.trabalho.gov.br/">Ministério do Trabalho</a></li>
-                <li><a href="https://empregabrasil.mte.gov.br/">Emprega Brasil</a></li>
-                <li><a href="http://fazenda.gov.br/">Ministério da Fazenda</a></li>
-                <li><a href="http://www.casacivil.gov.br/">Casa Civil</a></li>
-              </ul>
-            </div>
-            <div class="coluna-fale">
-              <ul></ul>
-            </div>
-            <div class="coluna-navegacao">
-              <ul></ul>
             </div>
             <div class="coluna-governo">
               <ul>
