--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>IDG 2.0</title>
-    <!--[if IE]>
-    <script src="http://htmlshiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,900" rel="stylesheet">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="img/touch_icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= htmlWebpackPlugin.options.publicPath %>favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= htmlWebpackPlugin.options.publicPath %>favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.options.publicPath %>favicons/favicon-16x16.png">
+    <link rel="manifest" href="<%= htmlWebpackPlugin.options.publicPath %>favicons/manifest.json">
+    <link rel="mask-icon" href="<%= htmlWebpackPlugin.options.publicPath %>favicons/safari-pinned-tab.svg" color="#00a300">
+    <meta name="msapplication-config" content="<%= htmlWebpackPlugin.options.publicPath %>favicons/browserconfig.xml">
+    <meta name="theme-color" content="#00a300">
   </head>
   <body>
     <p class="hiddenStructure">
