--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -84,7 +84,7 @@
 
     </header>
 
-    <div id="portal-breadcrumbs">
+    <div id="portal-breadcrumbs" class="inverter">
 
         <span id="breadcrumbs-you-are-here">Você está aqui:</span>
         <span id="breadcrumbs-home">
@@ -113,7 +113,7 @@
 
     <div class="video"></div>
 
-    <div id="wrapper" class="inverter">
+    <div id="wrapper">
 
 
       <!-- Columns -->
