[221] adequação de ícones e altocontraste

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -54,7 +54,11 @@
       <div class="search-wrapper">
           <!-- icones -->
           <div class="header-icons">
-            <a class="ico-navegacao">Navegação</a>
+            <a>
+                <div class="ico-navegacao">
+
+                </div>
+            </a>
           </div>
           <div class="links-destaque">
             <ul>
@@ -221,10 +225,10 @@
             </div>
             <div class="coluna-governo">
               <ul>
-                <li class="logo-governo">
+                <li id="logo-governo" class="logo-governo">
                   <a href="#">Governo Federal</a>
                 </li>
-                <li class="logo-acesso">
+                <li id="logo-acesso" class="logo-acesso">
                   <a href="#">Acesso à Informação</a>
                 </li>
               </ul>
