Alterações de CSS e inclusão de textos

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -36,6 +36,8 @@
 
           <div class="header-accessibility">
             <ul>
+              <!--verificar se terá esse gatilho manual-->
+              <!--<li><a href="#" class="tour">Tour</a></li>-->
               <li><a href="#" class="link-contraste">Alto Contraste</a></li>
               <li><a href="http://www.vlibras.gov.br/" class="link-vlibras">Vlibras</a></li>
             </ul>
