Utiliza logos do rodape a partir da barra

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -221,9 +221,9 @@
             </div>
           </div>
 
-
           <div class="clear"></div>
         </div>
+        <div id="footer-brasil"></div>
       </footer>
 
     </div>
