Remove formataações desnecessarias

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -24,7 +24,7 @@
       </ul>
     </div>
     <!-- Header -->
-    <header id="main-header" role="banner" class="inverter">
+    <header id="main-header" class="inverter">
       <div class="header-wrapper">
           <div id="logo">
               <a id="portal-logo" title="Todas as informações sobre a Presidência da República do Brasil e as atividades diárias do presidente Michel Temer." href="http://www2.planalto.gov.br">
@@ -83,7 +83,7 @@
 
         <div class="navigation-content">
 
-          <nav id="main-navigation" role="navigation" class="navigation-cell">
+          <nav id="main-navigation" class="navigation-cell">
               <ul class="list-navigation">
                 <li><a href="#" title="Link name">Notícias</a></li>
                 <li><a href="#" title="Link name">FAQ</a></li>
