--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-config" content="<%= htmlWebpackPlugin.options.publicPath %>favicons/browserconfig.xml">
     <meta name="theme-color" content="#00a300">
   </head>
-  <body>
+  <body class="default-header-template">
     <p class="hiddenStructure">
       <a accesskey="2" href="#conteudo">Skip to content.</a> |
       <a accesskey="3" href="#main-navigation">Skip to navigation</a>
