Ajusta tamplate para o accesslint

--- a/webpack/app/index-minimalista.html
+++ b/webpack/app/index-minimalista.html
@@ -84,6 +84,7 @@
         <h2>O que você está procurando?</h2>
         <form>
           <div class="LSBox">
+            <label class="hiddenStructure" for="searchGadget">Buscar no portal</label>
             <input name="SearchableText" type="text" size="18" title="Buscar no Site" placeholder="Buscar no Site" accesskey="4" class="searchField" id="searchGadget" autocomplete="off"><input class="searchButton" type="submit" value="Buscar">
             <div class="LSResult" id="LSResult" style="display: none;">
               <div class="LSShadow" id="LSShadow"></div>
