Melhorias para a navegação via teclado

--- a/webpack/app/index-minimalista.html
+++ b/webpack/app/index-minimalista.html
@@ -13,10 +13,10 @@
     <meta name="theme-color" content="#00a300">
   </head>
   <body class="expandable-header-template">
-    <p class="hiddenStructure">
-      <a accesskey="2" href="#conteudo">Skip to content.</a> |
-      <a accesskey="3" href="#main-navigation">Skip to navigation</a>
-    </p>
+    <ul id="skip-menu">
+      <li><a accesskey="2" href="#content">Ir para o conteúdo</a></li>
+      <li><a accesskey="3" href="#main-navigation">Ir para o menu</a></li>
+    </ul>
     <!-- User -->
     <div id="user">
       <ul>
