Adiciona outros links

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -14,8 +14,10 @@
   </head>
   <body class="default-header-template">
     <ul id="skip-menu">
-      <li><a accesskey="2" href="#content">Ir para o conteúdo</a></li>
-      <li><a accesskey="3" href="#main-navigation">Ir para o menu</a></li>
+      <li><a accesskey="1" href="#content">Ir para o conteúdo</a></li>
+      <li><a accesskey="2" href="#main-navigation">Ir para o menu</a></li>
+      <li><a accesskey="3" href="#portal-searchbox">Ir para a busca</a></li>
+      <li><a accesskey="4" href="#portal-footer">Ir para o rodapé</a></li>
     </ul>
     <!-- User -->
     <div id="user">
