Corrige formatação das telas de configuração

--- a/webpack/app/index.html
+++ b/webpack/app/index.html
@@ -141,7 +141,7 @@
       <!-- Columns -->
 
 
-      <div id="main">
+      <div id="main" class="has-portlets">
         <aside id="column-one">
           <div class="visualPadding">
             <div class="portlet">Coluna 1</div>
