--- a/src/brasil/gov/temas/themes/azul/index.html
+++ b/src/brasil/gov/temas/themes/azul/index.html
@@ -82,8 +82,6 @@
 
             <div>
 
-                
-
             <div id="logo">
                 <a href="#" title="#">
                     <span id="portal-title">Portal Title</span>
@@ -432,7 +430,13 @@
         Menu do rodape
     </div>
     <div class="clear"></div>
-    <div id="footer-brasil" class="footer-logos"></div>
+    <div class="footer-logos">
+        <div id="wrapper-footer-brasil">
+            <a href="http://www.acessoainformacao.gov.br/">
+                <span class="logo-acesso-footer"></span>
+            </a>
+        </div>
+    </div>
 </div>
 <div id="extra-footer">
     <p>
