--- a/src/brasil/gov/temas/themes/branco/index.html
+++ b/src/brasil/gov/temas/themes/branco/index.html
@@ -65,6 +65,7 @@
                 </li>
             </ul>
 </div>
+
     <div id="user">
         <ul>
             <li>
@@ -80,6 +81,7 @@
         <div id="header" role="banner">
 
             <div>
+
             <div id="logo">
                 <a href="#" title="#">
                     <span id="portal-title">Portal Title</span>
@@ -428,7 +430,13 @@
         Menu do rodape
     </div>
     <div class="clear"></div>
-    <div id="footer-brasil" class="footer-logos"></div>
+    <div class="footer-logos">
+        <div id="wrapper-footer-brasil">
+            <a href="http://www.acessoainformacao.gov.br/">
+                <span class="logo-acesso-footer"></span>
+            </a>
+        </div>
+    </div>
 </div>
 <div id="extra-footer">
     <p>
